add saveAsync function for dao