@@ -72,4 +72,16 @@ test {
         exceptionFormat "full" // default is "short"
         events "started", "passed", "skipped", "failed", "standardOut", "standardError"
     }
+
+    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
+
+    if (System.getProperty('DEBUG', 'false') == 'true') {
+        jvmArgs '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
+    }
 }
